yaml-deployments-gke/demo_v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: version-app-v2
  labels:
    app: version-app
    version: 2.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: version-app
      version: 2.0.0
  template:
    metadata:
      labels:
        app: version-app
        version: 2.0.0
    spec:
      containers:
      - name: version-container
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: config-volume
        configMap:
          name: version-config-v2
