yaml-deployments-gke/service_v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: version-app-service-v1
spec:
  selector:
    app: version-app
    version: "1.0.0" 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
