yaml-deployments-gke/service_v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: version-app-service-v2
spec:
  selector:
    app: version-app
    version: "2.0.0" 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
