yaml-deployments-gke/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: version-app-route
spec:
  parentRefs:
  - name: version-app-gateway
  rules:
  - backendRefs:
      - name: version-app-service-v1
        port: 80
        weight: 0
      - name: version-app-service-v2
        port: 80
        weight: 100
